--- a/src/data/levels/003_CPU/012_Instructions (3-5) - Checks/chat/en.yml
+++ b/src/data/levels/003_CPU/012_Instructions (3-5) - Checks/chat/en.yml
@@ -6,5 +6,5 @@ main:
   - I don't think you will need help with these
   - 📚  implement all the check instructions in your `instructions` object!
   run-after-messages: |
-    store.dispatch.savedata.openFile("/docs/cpu_instructions.en.md");
+    store.dispatch.savedata.openFile("/docs/cpu/instructions.en.md");
   responses: []
