--- a/src/data/levels/003_CPU/010_Instructions (1-5) - Arithmetic/chat/en.yml
+++ b/src/data/levels/003_CPU/010_Instructions (1-5) - Arithmetic/chat/en.yml
@@ -6,7 +6,7 @@ main:
   - "🐏  instructions that expect <a memory address>"
   - "🔢  instructions that expect <a value>"
   - I'll exemplify this by implementing 3 common instructions in a particular format
-  - look at your 📄  ~/docs/cpu_example_instructions.js~ file!
+  - look at your 📄  ~/docs/cpu/example_instructions.js~ file!
   responses:
   - alright... how many arithmetic instructions are there? [howmany]
 
@@ -18,9 +18,9 @@ howmany:
   - implement all of the 12 arithmetic instructions on it
   - and export it under the `instructions` key in ~/code/index.js~
   - you need docs regarding what should each instruction do
-  - so check out 📄  ~/docs/cpu_instructions.en.md~
+  - so check out 📄  ~/docs/cpu/instructions.en.md~
   run-after-messages: |
-    store.dispatch.savedata.openFile("/docs/cpu_instructions.en.md");
+    store.dispatch.savedata.openFile("/docs/cpu/instructions.en.md");
   responses:
   - I need help moving bits 😅 [bits]
   - I need help updating the Z and N flags 😅 [flags]
