--- a/src/data/levels/003_CPU/011_Instructions (2-5) - Data/chat/en.yml
+++ b/src/data/levels/003_CPU/011_Instructions (2-5) - Data/chat/en.yml
@@ -5,7 +5,7 @@ main:
   - as the name suggests, they're all about storing and moving data 😉
   - 📚  implement all the data instructions in your `instructions` object!
   run-after-messages: |
-    store.dispatch.savedata.openFile("/docs/cpu_instructions.en.md");
+    store.dispatch.savedata.openFile("/docs/cpu/instructions.en.md");
   responses:
   - I need help with `PHP` 😅 [php]
 
