--- a/src/data/levels/003_CPU/014_Instructions (4-5) - Branching/chat/en.yml
+++ b/src/data/levels/003_CPU/014_Instructions (4-5) - Branching/chat/en.yml
@@ -1,7 +1,7 @@
 ---
 main:
   messages:
-  - branching means changing the value of `[PC]` (the Program Counter)
+  - branching means changing the value of [PC] (the Program Counter)
   - and that's what all these instructions do
   - 📚  implement all the branching instructions in your `instructions` object!
   run-after-messages: |
