--- a/src/data/levels/000_Getting started/001_Quick tutorial/chat/en.yml
+++ b/src/data/levels/000_Getting started/001_Quick tutorial/chat/en.yml
@@ -22,7 +22,7 @@ app:
 
 otherapps:
   messages:
-  - to see what commands are available, run the `help` app
+  - to see what commands are available, hit `Ctrl+C` and run the `help` app
   - it will list them all along with a brief explanation of what they do
   responses:
   - ...main
