--- a/src/data/levels/000_Getting started/001_Quick tutorial/chat/es.yml
+++ b/src/data/levels/000_Getting started/001_Quick tutorial/chat/es.yml
@@ -22,7 +22,7 @@ app:
 
 otherapps:
   messages:
-  - para ver qué comandos están disponibles, ejecutá la app `help`
+  - para ver qué comandos están disponibles, presiona `Ctrl+C` y ejecuta la app `help`
   - listará todos ellos junto a una breve explicación de lo que hacen
   responses:
   - ...main
