--- a/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
@@ -140,14 +140,14 @@ finish:
   - cuando quieras, podemos ir al siguiente nivel
   responses:
   - 💪  creo que ya entendí todo [end]
-  - <!m.$others> (*) ¿y qué onda con [X], [Y], and [SP]? [theothers]
-  - (*) I don't like clicking buttons [clicking]
+  - <!m.$others> (*) ¿y qué onda con [X], [Y], y [SP]? [theothers]
+  - (*) no me gusta clickear botones [clicking]
 
 clicking:
   messages:
-  - hmm...
-  - you can navigate to the code section with `Alt+Up`
-  - then hit `Alt+Enter`
-  - and go back with `Alt+Left`
+  - mmm...
+  - puedes navegar a la sección de código con `Alt+Up`
+  - luego, presionar `Alt+Enter`
+  - y volver con `Alt+Left`
   responses:
   - ...finish
