--- a/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
+++ b/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
@@ -112,8 +112,9 @@ help:
   messages:
   - 🔀  you want to always use `BEQ` and `BNE` after a comparison instruction (like `CPX`)
   - "`CPX` sets the flag Z=1 if [X] equals the value, and then `BEQ`/`BNE` jump depending on whether Z is 1 or 0"
-  - 🏷️  also, remember that labels are ignored unless we have to jump to any of them
-  - 🛑  if you ever need to stop the program, you can put a label at the very end of the code
+  - 🏷️  remember that execution always goes from top to bottom, ignoring labels
+  - therefore, at some point, you may need to stop the program (to prevent it from advancing to the next label)
+  - 🛑  for that, you can put a label at the very end of the code
   - and use a branch instruction to jump to it
   - or more simply, just use the `BRK` instruction, which halts the execution 😉
   responses: []
