--- a/src/data/levels/003_CPU/001_Registers/chat/en.yml
+++ b/src/data/levels/003_CPU/001_Registers/chat/en.yml
@@ -5,9 +5,9 @@ main:
   - |-
     they should have two methods:
     **getValue()**:
-      __returns the register's content__
+      __-> returns the register's content__
     **setValue(value)**:
-      __sets the register's content__
+      __-> sets the register's content__
   - the register's content starts from 0 and can be an 8-bit number (0-255) or a 16-bit number (0-65535), depending on the class
   responses:
   - (*) what if I try to write off the limits? 🚫 [limit]
