Finishing Opcodes level

--- a/src/data/levels/003_CPU/018_Opcodes/chat/es.yml
+++ b/src/data/levels/003_CPU/018_Opcodes/chat/es.yml
@@ -1,5 +1,25 @@
 ---
 main:
   messages:
-  - coming soon!
+  - "\"opcode\" significa \"código de operación\""
+  - entonces... ¿qué es una <operación>? 🤔
+  - es la unión entre una 📖  <instrucción> y un 📍  <modo de direccionamiento>
+  - "listemos algunos ejemplos:"
+  - "`STA $4080`: la instrucción `STA` usando el modo `ABSOLUTE`"
+  - "  => opcode $8D"
+  - "`STA $30,X`: la instrucción `STA` usando el modo `INDEXED_ABSOLUTE_X`"
+  - "  => opcode $9D"
+  - "`STA ($55),Y`: la instrucción `STA` usando el modo `INDIRECT_INDEXED`"
+  - "  => opcode $91"
+  responses:
+  - ¿eso significa que `STA` puede tener diferentes opcodes dependiendo del modo de direccionamiento? [multiple]
+
+multiple:
+  messages:
+  - exactamente eso ✔️
+  - "aquí hay una función que define todos los opcodes por ti:"
+  - 📄  ~/lib/opcodes.js~
+  - solo necesitas llamarla, pasando los objetos `instructions` y `addressingModes`
+  - "📚  agrega la siguiente propiedad a tu `CPU`:"
+  - "```javascript this.opcodes = opcodes(instructions, addressingModes);```"
   responses: []
