--- a/src/data/levels/002_Cartridge/003_Locating the program/chat/en.yml
+++ b/src/data/levels/002_Cartridge/003_Locating the program/chat/en.yml
@@ -13,4 +13,11 @@ cut:
   - it trims the array from `start` to `end`-1
   - "i.e. ```javascript [\"a\", \"b\", \"c\", \"d\"].slice(1, 3)``` returns ```javascript [\"b\", \"c\"]```"
   - (it doesn't include the element at index 3, "d")
+  responses:
+  - it doesn't work [morehelp]
+
+morehelp:
+  messages:
+  - remember, the second argument is the <end> index, not a length
+  - if you want 30 bytes, starting from byte 5, you need to write ```javascript array.slice(5, 5 + 30)```
   responses: []
