--- a/src/data/levels/002_Cartridge/003_Locating the program/chat/es.yml
+++ b/src/data/levels/002_Cartridge/003_Locating the program/chat/es.yml
@@ -13,4 +13,11 @@ cut:
   - recorta el array de `start` a `end`-1
   - "por ej. ```javascript [\"a\", \"b\", \"c\", \"d\"].slice(1, 3)``` retorna ```javascript [\"b\", \"c\"]```"
   - (no incluye el elemento del índice 3, "d")
+  responses:
+  - no funciona [morehelp]
+
+morehelp:
+  messages:
+  - recuerda, el segundo argumento es el índice <final>, no una longitud
+  - si quieres 30 bytes, empezando por el byte 5, necesitas escribir ```javascript array.slice(5, 5 + 30)```
   responses: []
