--- a/src/data/levels/003_CPU/017_Addressing modes (2-2)/chat/es.yml
+++ b/src/data/levels/003_CPU/017_Addressing modes (2-2)/chat/es.yml
@@ -2,8 +2,9 @@
 main:
   messages:
   - los modos indexados...
-  - ¡hora de implementarlos también!
+  - hora de implementarlos también
   - hecha un vistazo al pseudocódigo de ejemplo dentro de la documentación 👀
   - tienes que tener cuidado y aplicar las llamadas a `byte.toU8(...)` y `byte.toU16(...)` apropiadas
   - p. ej. en el modo "Absolute,X", si la <entrada> es $FFFF y [X] es 3, el <output> tiene que ser 2 (y no $10002)
+  - 📚  ¡implementa los modos restantes!
   responses: []
