--- a/src/data/levels/003_CPU/018_Opcodes/chat/en.yml
+++ b/src/data/levels/003_CPU/018_Opcodes/chat/en.yml
@@ -1,11 +1,25 @@
 ---
 main:
   messages:
-  - "opcode" stands for "operation code"
-  - so... what's an <operation>?
-  - it's the union of an <instruction> and an <addressing mode>
+  - "\"opcode\" stands for \"operation code\""
+  - so... what's an <operation>? 🤔
+  - it's the union of an 📖  <instruction> and an 📍  <addressing mode>
   - "let's list some examples:"
-  - "`STA $4080`: `STA` with the `ABSOLUTE` mode is opcode $8D"
-  - "`STA $30,X`: `STA` with the `INDEXED_ABSOLUTE_X` mode is opcode $9D"
-  - "`STA ($55),Y`: `STA  with the `INDIRECT_INDEXED` mode is opcode $91"
+  - "`STA $4080`: the `STA` instruction using the `ABSOLUTE` mode"
+  - "  => opcode $8D"
+  - "`STA $30,X`: the `STA` instruction with the `INDEXED_ABSOLUTE_X` mode"
+  - "  => opcode $9D"
+  - "`STA ($55),Y`: the `STA` instruction with the `INDIRECT_INDEXED`"
+  - "  => opcode $91"
+  responses:
+  - that means `STA` can have different opcodes depending on the addressing mode? [multiple]
+
+multiple:
+  messages:
+  - exactly that ✔️
+  - "here's a function that defines all the opcodes for you:"
+  - 📄  ~/lib/opcodes.js~
+  - you only need to call it, passing the `instructions` and the `addressingModes` objects
+  - "📚  add the following property to your `CPU`:"
+  - "```javascript this.opcodes = opcodes(instructions, addressingModes);```"
   responses: []
